--- a/FrogDate.API/appsettings.json
+++ b/FrogDate.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "DefaultConnection": "Data Source = FrogDate.db" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
