--- a/FrogDate.SPA/package.json
+++ b/FrogDate.SPA/package.json
@@ -21,6 +21,8 @@
     "@auth0/angular-jwt": "^5.1.2",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^5.3.0-alpha1",
+    "bootswatch": "^5.2.3",
+    "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
