--- a/FrogDate.SPA/package.json
+++ b/FrogDate.SPA/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "alertifyjs": "^1.13.1",
-    "bootstrap": "^5.3.0-alpha1",
+    "bootstrap": "^3.4.1",
     "bootswatch": "^5.2.3",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
