--- a/FrogDate.SPA/package.json
+++ b/FrogDate.SPA/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.8",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -20,8 +21,9 @@
     "@angular/router": "^15.2.0",
     "@auth0/angular-jwt": "^5.1.2",
     "alertifyjs": "^1.13.1",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.6.2",
     "bootswatch": "^5.2.3",
+    "ng-gallery": "^8.0.4",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
