Claudinary implemented, DB updated,

--- a/FrogDate.API/appsettings.json
+++ b/FrogDate.API/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings":{
+    "CloudName":"dfthlquhy",
+    "APIKey":"285125283582796",
+    "APISecret":"BbaCDtJK_ua385IDpuTgm-GXZ14"
+
+
+  }
 }
