--- a/FrogDate.SPA/package.json
+++ b/FrogDate.SPA/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.6.2",
     "bootswatch": "^5.2.3",
     "ng-gallery": "^8.0.4",
+    "ng2-file-upload": "^3.0.0",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
